profilelist1exp/unpackaged/objects/Partner_Campaign_Management__c.object
<CustomObject>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Partner_Account__r.Account_Country__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Affinity_Account_ID__c</fullName>
        <formula>Partner_Account__r.Account_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Affinity Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Lead_Flag__c</fullName>
        <description>15/09/2015 Afiq: Adding a new formula field that will grab the number of associated lead in a Campaign</description>
        <formula>Campaign__r.Total_Leads__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Lead Flag</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Related Partners</relationshipLabel>
        <relationshipName>Partner_Campaign_Managements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Dell_Competencies__c</fullName>
        <formula>IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Builder&quot;),&quot;Cloud Builder; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Enabler&quot;),&quot;Cloud Enabler; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Provider&quot;),&quot;Cloud Provider; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Services&amp;Solutions-Cloud Builder&quot;),&quot;Cloud Services&amp;Solutions-Cloud Builder; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Services&amp;Solutions-Cloud Enabler&quot;),&quot;Cloud Services&amp;Solutions-Cloud Enabler; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Cloud Services&amp;Solutions-Cloud Provider&quot;),&quot;Cloud Services&amp;Solutions-Cloud Provider; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Desktop Virtualization Solutions&quot;),&quot;Desktop Virtualization Solutions; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;General On Boarding EM EMEA&quot;),&quot;General On Boarding EM EMEA; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Independent Software Vendor&quot;),&quot;Independent Software Vendor; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Managed Service Provider&quot;),&quot;Managed Service Provider; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Networking&quot;),&quot;Networking; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Onboarding - LA English&quot;),&quot;Onboarding - LA English; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Onboarding - LA Portuguese&quot;),&quot;Onboarding - LA Portuguese; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Onboarding - LA Spanish&quot;),&quot;Onboarding - LA Spanish; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Preferred Partner EM EMEA&quot;),&quot;Preferred Partner EM EMEA; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Premier Partner EM EMEA&quot;),&quot;Premier Partner EM EMEA; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Server&quot;),&quot;Server; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Solutions&quot;),&quot;Solutions; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Storage&quot;),&quot;Storage; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Data Protection&quot;),&quot;Data Protection; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Security – Dell Identity&amp;Access Mgmnt&quot;),&quot;Security – Dell Identity&amp;Access Mgmnt; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Security – Dell Network Security&quot;),&quot;Security – Dell Network Security; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Systems Mgmnt – Client Mgmnt&quot;),&quot;Systems Mgmnt – Client Mgmnt; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Systems Mgmnt – Performance Monitoring&quot;),&quot;Systems Mgmnt – Performance Monitoring; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Systems Mgmnt – Windows Server Mgmnt&quot;),&quot;Systems Mgmnt – Windows Server Mgmnt; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Systems Mgmnt – Virtualization and Cloud&quot;),&quot;Systems Mgmnt – Virtualization and Cloud; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Information Mgmnt – Database Mgmnt&quot;),&quot;Information Mgmnt – Database Mgmnt; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Info Mgmnt–Biz Inteligence&amp;DataAnalytics&quot;),&quot;Info Mgmnt–Biz Inteligence&amp;DataAnalytics; &quot;,NULL)+IF(INCLUDES(Partner_Account__r.Dell_Certification_Areas__c,&quot;Info Mgmnt–Application&amp;DataIntegration&quot;),&quot;Info Mgmnt–Application&amp;DataIntegration&quot;,NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dell Competencies</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mascot_Activity_Id__c</fullName>
        <formula>Campaign__r.Aprimo_Activity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Mascot Activity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account_ID__c</fullName>
        <formula>Partner_Account__r.Id</formula>
        <label>Partner Account ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <label>Partner Account</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>OEM, Partner</value>
            </filterItems>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Partner Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Related Channel Campaign</relationshipLabel>
        <relationshipName>Partner_Campaign_Managements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Partner_Relationship__c</fullName>
        <formula>Partner_Account__r.Partner_Relationship__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Tier__c</fullName>
        <formula>Partner_Account__r.Partner_Tier__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Tier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Partner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Partner</label>
        <type>Checkbox</type>
    </fields>
    <label>Partner Campaign Management</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCM-{0000}</displayFormat>
        <label>PCM ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Campaign Managements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>